Fix form display bugs on mobile browser

--- a/client/src/components/LoginForm/LoginForm.scss
+++ b/client/src/components/LoginForm/LoginForm.scss
@@ -4,6 +4,7 @@
   margin-top: 100px;
   padding: 20px;
   color: white;
+  overflow-x: hidden;
 
   .social-sign-buttons-container {
     display: flex;
